crates/aes_compiler/src/snapshots/aes_compiler__export__tests__type_defs__empty_type.snap
---
source: crates/aes_compiler/src/export.rs
expression: schema
---
Schema {
    types: [
        TypeDefinition {
            name: "user",
            relations: [],
            permissions: [],
        },
    ],
}
