crates/aes_compiler/src/snapshots/aes_compiler__export__tests__type_defs__multiple_types.snap
---
source: crates/aes_compiler/src/export.rs
expression: schema
---
Schema {
    types: [
        TypeDefinition {
            name: "user",
            relations: [],
            permissions: [],
        },
        TypeDefinition {
            name: "group",
            relations: [
                Relation {
                    name: "member",
                    actors: [
                        ActorType {
                            actor: Some(
                                Direct(
                                    "user",
                                ),
                            ),
                        },
                    ],
                },
            ],
            permissions: [],
        },
        TypeDefinition {
            name: "doc",
            relations: [
                Relation {
                    name: "owner",
                    actors: [
                        ActorType {
                            actor: Some(
                                Direct(
                                    "group",
                                ),
                            ),
                        },
                    ],
                },
            ],
            permissions: [
                Permission {
                    name: "read",
                    expr: Some(
                        Expression {
                            kind: Some(
                                Term(
                                    TermExpr {
                                        term: Some(
                                            Traversal(
                                                Traversal {
                                                    relation: "owner",
                                                    permission: "member",
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ),
                        },
                    ),
                },
            ],
        },
    ],
}
