crates/aes_compiler/src/snapshots/aes_compiler__export__tests__type_defs__type_with_relation_only.snap
---
source: crates/aes_compiler/src/export.rs
expression: schema
---
Schema {
    types: [
        TypeDefinition {
            name: "user",
            relations: [],
            permissions: [],
        },
        TypeDefinition {
            name: "doc",
            relations: [
                Relation {
                    name: "owner",
                    actors: [
                        ActorType {
                            actor: Some(
                                Direct(
                                    "user",
                                ),
                            ),
                        },
                    ],
                },
            ],
            permissions: [],
        },
    ],
}
